--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div id="Navbar">
-            <div>
+            <div id="logo">
                 <a href="index.html"><img style="position: center ; margin-left: 40%"  src="project_files/imgs/game-logo_42.png" width="400" height="150" alt="Logo"></a>
             </div>
             <span>
@@ -24,32 +24,24 @@
         </div>
     </header>
 
-    <div class="content" style="position: center">
+    <div class="content">
         <br/>
         <br/>
         <br/>
         <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-
-
-        SCORE:
-        <input id="lblScore" type="text"/>
-        <br/>
-        TIME:
-        <input id="lblTime" type="text"/>
-        <br/>
-        <canvas id="canvas" height="600" width="600"></canvas>
-
+        <span>
+            <div>
+                SCORE:
+                <input id="lblScore" type="text"/>
+                <br/>
+                TIME:
+                <input id="lblTime" type="text"/>
+                <br/>
+            </div>
+            <div>
+                <canvas id="canvas" style="position:relative; left: 60%" height="600" width="600"></canvas>
+            </div>
+        </span>
 
     </div>
 
