--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
 <html>
 
 <head>
-    <title> PACMAN  </title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <title> PACMAN </title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
     <link rel="icon" href="project_files/imgs/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="project_files/bootsrap/bootstrap.css">
 </head>
 
 <body>
-    <header>
-        <div id="Navbar">
-            <div id="logo">
-                <a href="index.html"><img style="position: center ; margin-left: 40%"  src="project_files/imgs/game-logo_42.png" width="400" height="150" alt="Logo"></a>
-            </div>
-            <span>
+<div class="container-fluid">
+    <div class="row">
+        <header>
+            <div id="Navbar">
+                <div id="logo">
+                    <a href="index.html"><img style="position: center ; margin-left: 40%"
+                                              src="project_files/imgs/game-logo_42.png" width="400" height="150"
+                                              alt="Logo"></a>
+                </div>
+                <span>
         <ul>
             <li><a href="#" onclick="ShowPage('home')">Home</a></li>
             <li><a href="#" onclick="ShowPage('register')">Register</a></li>
@@ -21,51 +26,47 @@
             <li><a href="#" onclick="ShowPage('about')">About</a></li>
         </ul>
              </span>
-        </div>
-    </header>
-
-    <div class="content">
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <div id="game_page1">
-
-
-
-
-
-        </div>
-        <div id="game_page2">
-            <div>
-                SCORE:
-                <input id="lblScore" type="text"/>
-                <br/>
-                TIME:
-                <input id="lblTime" type="text"/>
-                <br/>
             </div>
-            <div>
-                <canvas id="canvas" style="position:relative; left: 60%" height="600" width="600"></canvas>
+        </header>
+    </div>
+    <div class="row">
+        <div class="game">
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <div id="game_page1">
+
+
             </div>
-        </div>
-        <div id="game_page3">
+            <div id="game_page2">
+                <div class="row">
+                    <div class="col-lg-8">
+                        SCORE:
+                        <input id="lblScore" type="text"/>
+                        <br/>
+                        TIME:
+                        <input id="lblTime" type="text"/>
+                        <br/>
+                    </div>
+                    <div class="col-lg-4">
+                        <canvas id="canvas" height="600" width="600"></canvas>
+                    </div>
+                </div>
+            </div>
+            <div id="game_page3">
 
 
-
-
-
-
-
+            </div>
         </div>
     </div>
 
-    <footer class="footer">
+    <div class="row">
+        <footer class="footer">
 
 
-
-
-    </footer>
+        </footer>
+    </div>
 
     <script type="text/javascript">
         var context = canvas.getContext("2d");
@@ -230,5 +231,6 @@
             }
         }
     </script>
+</div>
 </body>
 </html>
