--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 
 <head>
     <title> PACMAN </title>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
-    <link rel="icon" href="project_files/imgs/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="project_files/bootsrap/bootstrap.css">
+    <link rel="icon" href="project_files/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="project_files/css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="project_files/css/bootstrap.css">
+    <script type="text/javascript" src="project_files/js/project.js"></script>
+    <script type="text/javascript" src="project_files/js/bootstrap.js"></script>
+    <script type="text/javascript" src="project_files/js/jquery-3.4.0.js"></script>
 </head>
 
 <body>
@@ -15,7 +18,7 @@
             <div id="Navbar">
                 <div id="logo">
                     <a href="index.html"><img style="position: center ; margin-left: 40%"
-                                              src="project_files/imgs/game-logo_42.png" width="400" height="150"
+                                              src="project_files/images/game-logo.png" width="400" height="150"
                                               alt="Logo"></a>
                 </div>
                 <span>
