--- a/index.html
+++ b/index.html
@@ -11,36 +11,59 @@
     <script type="text/javascript" src="project_files/lib/jquery-3.4.0.js"></script>
 </head>
 
+
 <body>
 <div class="container-fluid">
     <div class="row">
-        <header>
+        <header style="position: fixed ; margin: 0;width: 100%;">
+            <div id="Logo">
+                <img style="position: center ; margin-left: 40%" src="project_files/images/game-logo.png" width="400"
+                     height="150" alt="Logo">
+            </div>
             <div id="Navbar">
-                <div id="logo">
-                    <a href="index.html"><img style="position: center ; margin-left: 40%"
-                                              src="project_files/images/game-logo.png" width="400" height="150"
-                                              alt="Logo"></a>
-                </div>
-                <span>
-        <ul>
-            <li><a href="#" onclick="ShowPage('home')">Home</a></li>
-            <li><a href="#" onclick="ShowPage('register')">Register</a></li>
-            <li><a href="#" onclick="ShowPage('login')">Login</a></li>
-            <li><a href="#" onclick="ShowPage('about')">About</a></li>
-        </ul>
-             </span>
+                <ul>
+                    <li><a href="#" onclick="ShowPage('home')">Home</a></li>
+                    <li><a href="#" onclick="ShowPage('register')">Register</a></li>
+                    <li><a href="#" onclick="ShowPage('login')">Login</a></li>
+                    <li><a href="#" onclick="ShowPage('about')">About</a></li>
+                </ul>
             </div>
         </header>
     </div>
-    <div class="row">
-        <div class="game">
+    <div class="row" id="Stage">
+        <section id="Home">
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+        </section>
+        <section id="Register">
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+        </section>
+        <section id="Login">
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+        </section>
+        <section id="About">
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+        </section>
+        <section id="Game">
             <br/>
             <br/>
             <br/>
             <br/>
             <div id="game_page1">
-
-
+                <br/>
+                <br/>
+                <br/>
             </div>
             <div id="game_page2">
                 <div class="row">
@@ -58,18 +81,19 @@
                 </div>
             </div>
             <div id="game_page3">
-
-
+                <br/>
+                <br/>
+                <br/>
             </div>
+        </section>
+        <div class="row">
+            <footer class="footer">
+
+
+            </footer>
         </div>
     </div>
 
-    <div class="row">
-        <footer class="footer">
-
-
-        </footer>
-    </div>
 
     <script type="text/javascript">
         var context = canvas.getContext("2d");
