--- a/index.html
+++ b/index.html
@@ -5,27 +5,25 @@
     <title> PACMAN </title>
     <link rel="icon" href="project_files/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="project_files/css/style.css"/>
-    <link rel="stylesheet" type="text/css" href="project_files/css/bootstrap.css">
-    <script type="text/javascript" src="project_files/lib/project.js"></script>
-    <script type="text/javascript" src="project_files/lib/bootstrap.js"></script>
+    <!--<link rel="stylesheet" type="text/css" href="project_files/css/bootstrap.css">-->
+    <!--<script type="text/javascript" src="project_files/lib/project.js"></script>-->
+    <!--<script type="text/javascript" src="project_files/lib/bootstrap.js"></script>-->
     <script type="text/javascript" src="project_files/lib/jquery-3.4.0.js"></script>
 </head>
 
 
-<body>
-<div class="container-fluid">
+<body class="content">
     <div class="row">
         <header style="position: fixed ; margin: 0;width: 100%;">
             <div id="Logo">
-                <img style="position: center ; margin-left: 40%" src="project_files/images/game-logo.png" width="400"
-                     height="150" alt="Logo">
+                <img style="position: center ; margin-left: 40%" src="project_files/images/game-logo.png" width="400" height="150" alt="Logo">
             </div>
             <div id="Navbar">
                 <ul>
-                    <li><a href="#" onclick="ShowPage('home')">Home</a></li>
-                    <li><a href="#" onclick="ShowPage('register')">Register</a></li>
-                    <li><a href="#" onclick="ShowPage('login')">Login</a></li>
-                    <li><a href="#" onclick="ShowPage('about')">About</a></li>
+                    <li><a href="#" onclick="Show_Tab('Home')">Home</a></li>
+                    <li><a href="#" onclick="Show_Tab('Register')">Register</a></li>
+                    <li><a href="#" onclick="Show_Tab('Login')">Login</a></li>
+                    <li><a href="#" onclick="Show_Tab('About')">About</a></li>
                 </ul>
             </div>
         </header>
@@ -33,24 +31,28 @@
     <div class="row" id="Stage">
         <section id="Home">
             <br/>
+            <div> test home </div>
             <br/>
             <br/>
             <br/>
         </section>
         <section id="Register">
             <br/>
+            <div> test reg </div>
             <br/>
             <br/>
             <br/>
         </section>
         <section id="Login">
             <br/>
+            <div> test log </div>
             <br/>
             <br/>
             <br/>
         </section>
         <section id="About">
             <br/>
+          <div>  test about </div>
             <br/>
             <br/>
             <br/>
@@ -88,176 +90,14 @@
         </section>
         <div class="row">
             <footer class="footer">
-
-
+                <br/>
+                test footer
+                <br/>
+                <br/>
+                <br/>
             </footer>
         </div>
     </div>
-
-
-    <script type="text/javascript">
-        var context = canvas.getContext("2d");
-        var shape = new Object();
-        var board;
-        var score;
-        var pac_color;
-        var start_time;
-        var time_elapsed;
-        var interval;
-
-        Start();
-
-        function Start() {
-            board = new Array();
-            score = 0;
-            pac_color = "yellow";
-            var cnt = 100;
-            var food_remain = 50;
-            var pacman_remain = 1;
-            start_time = new Date();
-            for (var i = 0; i < 10; i++) {
-                board[i] = new Array();
-                //put obstacles in (i=3,j=3) and (i=3,j=4) and (i=3,j=5), (i=6,j=1) and (i=6,j=2)
-                for (var j = 0; j < 10; j++) {
-                    if ((i === 3 && j === 3) || (i === 3 && j === 4) || (i === 3 && j === 5) || (i === 6 && j === 1) || (i === 6 && j === 2)) {
-                        board[i][j] = 4;
-                    } else {
-                        var randomNum = Math.random();
-                        if (randomNum <= 1.0 * food_remain / cnt) {
-                            food_remain--;
-                            board[i][j] = 1;
-                        } else if (randomNum < 1.0 * (pacman_remain + food_remain) / cnt) {
-                            shape.i = i;
-                            shape.j = j;
-                            pacman_remain--;
-                            board[i][j] = 2;
-                        } else {
-                            board[i][j] = 0;
-                        }
-                        cnt--;
-                    }
-                }
-            }
-            while (food_remain > 0) {
-                var emptyCell = findRandomEmptyCell(board);
-                board[emptyCell[0]][emptyCell[1]] = 1;
-                food_remain--;
-            }
-            keysDown = {};
-            addEventListener("keydown", function (e) {
-                keysDown[e.code] = true;
-            }, false);
-            addEventListener("keyup", function (e) {
-                keysDown[e.code] = false;
-            }, false);
-            interval = setInterval(UpdatePosition, 250);
-        }
-
-
-        function findRandomEmptyCell(board) {
-            var i = Math.floor((Math.random() * 9) + 1);
-            var j = Math.floor((Math.random() * 9) + 1);
-            while (board[i][j] !== 0) {
-                i = Math.floor((Math.random() * 9) + 1);
-                j = Math.floor((Math.random() * 9) + 1);
-            }
-            return [i, j];
-        }
-
-        /**
-         * @return {number}
-         */
-        function GetKeyPressed() {
-            if (keysDown['ArrowUp']) {
-                return 1;
-            }
-            if (keysDown['ArrowDown']) {
-                return 2;
-            }
-            if (keysDown['ArrowLeft']) {
-                return 3;
-            }
-            if (keysDown['ArrowRight']) {
-                return 4;
-            }
-        }
-
-        function Draw() {
-            context.clearRect(0, 0, canvas.width, canvas.height); //clean board
-            lblScore.value = score;
-            lblTime.value = time_elapsed;
-            for (var i = 0; i < 10; i++) {
-                for (var j = 0; j < 10; j++) {
-                    var center = new Object();
-                    center.x = i * 60 + 30;
-                    center.y = j * 60 + 30;
-                    if (board[i][j] === 2) {
-                        context.beginPath();
-                        context.arc(center.x, center.y, 30, 0.15 * Math.PI, 1.85 * Math.PI); // half circle
-                        context.lineTo(center.x, center.y);
-                        context.fillStyle = pac_color; //color
-                        context.fill();
-                        context.beginPath();
-                        context.arc(center.x + 5, center.y - 15, 5, 0, 2 * Math.PI); // circle
-                        context.fillStyle = "black"; //color
-                        context.fill();
-                    } else if (board[i][j] === 1) {
-                        context.beginPath();
-                        context.arc(center.x, center.y, 15, 0, 2 * Math.PI); // circle
-                        context.fillStyle = "black"; //color
-                        context.fill();
-                    } else if (board[i][j] === 4) {
-                        context.beginPath();
-                        context.rect(center.x - 30, center.y - 30, 60, 60);
-                        context.fillStyle = "grey"; //color
-                        context.fill();
-                    }
-                }
-            }
-
-
-        }
-
-        function UpdatePosition() {
-            board[shape.i][shape.j] = 0;
-            var x = GetKeyPressed();
-            if (x === 1) {
-                if (shape.j > 0 && board[shape.i][shape.j - 1] !== 4) {
-                    shape.j--;
-                }
-            }
-            if (x === 2) {
-                if (shape.j < 9 && board[shape.i][shape.j + 1] !== 4) {
-                    shape.j++;
-                }
-            }
-            if (x === 3) {
-                if (shape.i > 0 && board[shape.i - 1][shape.j] !== 4) {
-                    shape.i--;
-                }
-            }
-            if (x === 4) {
-                if (shape.i < 9 && board[shape.i + 1][shape.j] !== 4) {
-                    shape.i++;
-                }
-            }
-            if (board[shape.i][shape.j] === 1) {
-                score++;
-            }
-            board[shape.i][shape.j] = 2;
-            var currentTime = new Date();
-            time_elapsed = (currentTime - start_time) / 1000;
-            if (score >= 20 && time_elapsed <= 10) {
-                pac_color = "green";
-            }
-            if (score === 50) {
-                window.clearInterval(interval);
-                window.alert("Game completed");
-            } else {
-                Draw();
-            }
-        }
-    </script>
-</div>
+<script type="text/javascript" src="project_files/lib/project.js"></script>
 </body>
 </html>
