--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </header>
 </div>
-<div class="row" id="Stage">
+<div class="Stage">
     <section id="Home">
         <br/>
         <h1> test home </h1>
@@ -47,14 +47,14 @@
         <br/>
         <br/>
     </section>
-    <section id="Login">
+    <section  id="Login">
         <br/>
         <h1> test log </h1>
         <br/>
         <br/>
         <br/>
     </section>
-    <section id="About">
+    <section  id="About">
         <br/>
         <h1> test about </h1>
         <br/>
