--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="project_files/css/style.css"/>
     <link rel="stylesheet" type="text/css" href="project_files/css/bootstrap.css">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Wendy+One" rel="stylesheet">
 </head>
 
 <body id="content" onload="First_Load()">
@@ -33,12 +34,19 @@
 </div>
 <div class="Stage">
     <section id="Home">
-        <br/>
-        <h1> test home </h1>
-        <button onclick="Show_Tab('Game')" type="button" class="btn btn-primary btn-lg">Go to the Game</button>
-        <br/>
-        <br/>
-        <br/>
+        <div>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <button onclick="Show_Tab('Game')" type="button" class="btn btn-primary btn-lg">Go to the Game</button>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+        </div>
     </section>
     <section id="Register">
         <br/>
