--- a/index.html
+++ b/index.html
@@ -111,7 +111,16 @@
                         <label for="balls_number" class="col-sm-4 col-form-label">NUMBER OF BALLS:</label>
                         <div class="col-sm-8">
                             <div class="md-form mt-0">
-                                    <input type="number" id="balls_number" class="form-control">
+                                <div class="col-sm-8">
+                                    <select class="mdb-select colorful-select dropdown-primary md-form" multiple
+                                            searchable="Search here..">
+                                        <option value="1">50</option>
+                                        <option value="2">60</option>
+                                        <option value="3">70</option>
+                                        <option value="4">80</option>
+                                        <option value="5">90</option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -119,7 +128,16 @@
                         <label for="balls_color" class="col-sm-4 col-form-label">BALLS COLOR:</label>
                         <div class="col-sm-8">
                             <div class="md-form mt-0">
-                                <input type="email" class="form-control" id="balls_color">
+                                <div class="col-sm-8">
+                                    <select class="mdb-select colorful-select dropdown-primary md-form" multiple
+                                            searchable="Search here..">
+                                        <option value="1">BLUE</option>
+                                        <option value="2">RED</option>
+                                        <option value="3">YELLOW</option>
+                                        <option value="4">GREEN</option>
+                                        <option value="5">WHITE</option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -127,7 +145,16 @@
                         <label for="game_time" class="col-sm-4 col-form-label">TIME FOR GAME:</label>
                         <div class="col-sm-8">
                             <div class="md-form mt-0">
-                                <input type="email" class="form-control" id="game_time">
+                                <div class="col-sm-8">
+                                    <select class="mdb-select colorful-select dropdown-primary md-form" multiple
+                                            searchable="Search here..">
+                                        <option value="1">60 seconds</option>
+                                        <option value="2">90 seconds</option>
+                                        <option value="3">120 seconds</option>
+                                        <option value="4">150 seconds</option>
+                                        <option value="5">180 seconds</option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -135,10 +162,19 @@
                         <label for="number_monsters" class="col-sm-4 col-form-label">NUMBER OF MONSTERS:</label>
                         <div class="col-sm-8">
                             <div class="md-form mt-0">
-                                <input type="number" id="number_monsters" class="form-control">
+                                <div class="col-sm-8">
+                                    <select class="mdb-select colorful-select dropdown-primary md-form" multiple
+                                            searchable="Search here..">
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <br/>
+                    <br/>
                     <div class="form-group row">
                         <div class="col-sm-8">
                             <button onclick="Show_Tab('Game')" type="button" class="btn btn-primary btn-lg">START GAME
